log
Thu 20 Apr 2023 03:55:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
5ced81f
Thu 20 Apr 2023 03:55:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a691dda
Thu 20 Apr 2023 04:01:55 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:73:9: error: unused variable ‘aux’ [-Werror=unused-variable]
   73 |   Pair* aux = tree->root->pair;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
a424113
Thu 20 Apr 2023 04:07:51 PM UTC: 
 treemap.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
4a80571
Thu 20 Apr 2023 04:14:09 PM UTC: 
 treemap.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
 tests:  12|6
total_score: 15/70
94ab5ad
Thu 20 Apr 2023 04:14:42 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
bb00818
Thu 20 Apr 2023 04:18:06 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
269bf06
Thu 20 Apr 2023 04:33:16 PM UTC: 
 treemap.c | 36 +++++++++++++++++++++++++++++++++++-
 1 file changed, 35 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
77d103e
Thu 20 Apr 2023 04:46:22 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  18|3
total_score: 40/70
3b3a2cf
